Ação de click no botão de resultado saindo do HTML e indo para o JS.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <label for="altura" class="label__altura">Altura:</label>
                 <input type="number" id="altura" required>
 
-                <input type="button" onclick="calculaImc()" value="Calcular" class="botao">
+                <input type="button" value="Calcular" class="botao">
             </div>
 
             <div class="res"></div>
